--- a/gallery.html
+++ b/gallery.html
@@ -54,24 +54,6 @@
 
 		<!-- Header -->
 		<header class="header">
-			<div class="top clearfix">
-				<div class="container">
-					<nav class="top-nav">
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="about-us.html">About</a></li>
-							<li><a href="gallery.html">Gallery</a></li>
-							<li><a href="contact-page.html">Contact</a></li>
-						</ul>
-					</nav> <!-- end .top-nav -->
-					<div class="social-icons yellow">
-						<span class="social-icon"><a href=""><i class="fa fa-facebook"></i></a></span>
-						<span class="social-icon"><a href=""><i class="fa fa-twitter"></i></a></span>
-						<span class="social-icon"><a href=""><i class="fa fa-linkedin"></i></a></span>
-						<span class="social-icon"><a href=""><i class="fa fa-google-plus"></i></a></span>
-					</div> <!-- end .social-icons -->
-				</div> <!-- end .container -->
-			</div> <!-- end .top -->
 			<div class="container clearfix">
 				<div class="logo"><a href="index.html"><img src="images/logo.png" alt="Drive Pro"></a></div>
 				<div class="header-contacts">
@@ -90,6 +72,20 @@
 				</div> <!-- end .header-contacts -->
 				<a href="" class="responsive-menu-open">Menu <i class="fa fa-bars"></i></a>
 			</div> <!-- end .container -->
+
+			<div class="main-header clearfix">
+				<div class="container">
+					<nav class="main-nav">
+						<ul class="list-unstyled">
+							<li><a href="index.html">Home</a></li>
+							<li><a href="about-us.html">About</a></li>
+							<li class="active"><a href="gallery.html">Gallery</a></li>
+							<li><a href="contact-page.html">Contact</a></li>
+						</ul>
+					</nav> <!-- end .main-nav -->
+
+				</div> <!-- end .container -->
+			</div>
 
 			<div class="page-title transparent" style="background-image: url('images/background01.jpg');">
 				<div class="inner">
@@ -111,10 +107,7 @@
 		<div class="responsive-menu">
 			<a href="" class="responsive-menu-close">Close <i class="fa fa-times"></i></a>
 			<nav class="responsive-nav"></nav> <!-- end .responsive-nav -->
-			<form class="search-form">
-				<input type="search" id="responsive-menu-search" name="search" placeholder="Search Here">
-				<button type="submit"><i class="fa fa-search"></i></button>
-			</form> <!-- end .search-form -->
+
 		</div> <!-- end .responsive-menu -->
 
 		<section class="section white">
