--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
 								</div> <!-- end .icon -->
 								<div class="content">
 									<h5>Best Safety Measures</h5>
-									<p>Lorem ipsum Sunt cupidatat reprehenderit cillum reprehenderit incididunt consequat aute et proident tempor occaecat.</p>
-									<p><a href="">Read More <i class="fa fa-angle-double-right"></i></a></p>
+									<p>Learn how to drive safer and more efficiently. Make your road trips a breeze with the best driving school for beginners, students and professionals.</p>
+<!--									<p><a href="">Read More <i class="fa fa-angle-double-right"></i></a></p>-->
 								</div> <!-- end .content -->
 							</div> <!-- end .services -->
 						</div> <!-- end .col-sm-4 -->
@@ -158,8 +158,8 @@
 								</div> <!-- end .icon -->
 								<div class="content">
 									<h5>Experienced Instructors</h5>
-									<p>Lorem ipsum Sunt cupidatat reprehenderit cillum reprehenderit incididunt consequat aute et proident tempor occaecat.</p>
-									<p><a href="">Read More <i class="fa fa-angle-double-right"></i></a></p>
+									<p>Our experienced, polite and RSA’s Quality Approved driving instructor will design every driving lessons to meet individual requirements.</p>
+<!--									<p><a href="">Read More <i class="fa fa-angle-double-right"></i></a></p>-->
 								</div> <!-- end .content -->
 							</div> <!-- end .services -->
 						</div> <!-- end .col-sm-4 -->
@@ -170,8 +170,7 @@
 								</div> <!-- end .icon -->
 								<div class="content">
 									<h5>Perfect Timing</h5>
-									<p>Lorem ipsum Sunt cupidatat reprehenderit cillum reprehenderit incididunt consequat aute et proident tempor occaecat.</p>
-									<p><a href="">Read More <i class="fa fa-angle-double-right"></i></a></p>
+									<p>Flexible Timings to suite your work/college hours. <br/> We will pick you from your preferred location for lessons on time. <br/> Ring us today to book your lessons.</p>
 								</div> <!-- end .content -->
 							</div> <!-- end .services -->
 						</div> <!-- end .col-sm-4 -->
@@ -184,8 +183,7 @@
 								</div> <!-- end .icon -->
 								<div class="content">
 									<h5>Affordable Fee</h5>
-									<p>Lorem ipsum Sunt cupidatat reprehenderit cillum reprehenderit incididunt consequat aute et proident tempor occaecat.</p>
-									<p><a href="">Read More <i class="fa fa-angle-double-right"></i></a></p>
+									<p>Your driving school with the most affordable prices in town, our driving lessons prices are very competitive and professionally organized. We ensure that you always get full driving lesson what you paid for. </p>
 								</div> <!-- end .content -->
 							</div> <!-- end .services -->
 						</div> <!-- end .col-sm-4 -->
@@ -196,8 +194,7 @@
 								</div> <!-- end .icon -->
 								<div class="content">
 									<h5>Video Classes</h5>
-									<p>Lorem ipsum Sunt cupidatat reprehenderit cillum reprehenderit incididunt consequat aute et proident tempor occaecat.</p>
-									<p><a href="">Read More <i class="fa fa-angle-double-right"></i></a></p>
+									<p>We Cover rules of the road on our special online meeting prior to your lessons on road. <br> This will get your prepared for your first lesson, and you could start driving straight away.</p>
 								</div> <!-- end .content -->
 							</div> <!-- end .services -->
 						</div> <!-- end .col-sm-4 -->
@@ -208,8 +205,7 @@
 								</div> <!-- end .icon -->
 								<div class="content">
 									<h5>Quick License</h5>
-									<p>Lorem ipsum Sunt cupidatat reprehenderit cillum reprehenderit incididunt consequat aute et proident tempor occaecat.</p>
-									<p><a href="">Read More <i class="fa fa-angle-double-right"></i></a></p>
+									<p>We will not only teach you how to get your licence quickly but also teach you how to become a safe driver for your life. <br/>With us Students pass their driver licence first go Over 95%.</p>
 								</div> <!-- end .content -->
 							</div> <!-- end .services -->
 						</div> <!-- end .col-sm-4 -->
@@ -225,84 +221,25 @@
 
 					<!-- Instructors -->
 					<div class="heading text-center">
-						<h3>Our Instrucotrs & Testers</h3>
+						<h3>Our Instructor</h3>
 						<hr class="line" />
-						<span>Top Instructors From Californina</span>
+						<span><b>RSA's Quality Approved Driving Instructor</b> for Carlow, Kilkenny & Laoise</span>
 					</div> <!-- end .heading -->
 					<div class="row">
-						<div class="col-sm-3">
+						<div class="col-sm-12">
 							<div class="instructor">
 								<div class="image">
 									<div class="inner">
-										<img src="images/instructor01.jpg" alt="alt text" class="img-responsive">
+										<img src="images/reduce_joseph.jpg" alt="alt text" class="img-responsive">
 									</div> <!-- end .inner -->
 								</div> <!-- end .image -->
 								<div class="bio">
-									<h5>Jason Lin</h5>
+									<h5>Joseph K Joseph</h5>
 									<span>Instructor</span>
 								</div> <!-- end .bio -->
 								<div class="social-icons blue">
-									<div class="social-icon"><a href=""><i class="fa fa-facebook"></i></a></div>
-									<div class="social-icon"><a href=""><i class="fa fa-twitter"></i></a></div>
-									<div class="social-icon"><a href=""><i class="fa fa-linkedin"></i></a></div>
-									<div class="social-icon"><a href=""><i class="fa fa-google-plus"></i></a></div>
-								</div> <!-- end .social-icons -->
-							</div> <!-- end .instructor -->
-						</div> <!-- end .col-sm-3 -->
-						<div class="col-sm-3">
-							<div class="instructor">
-								<div class="image">
-									<div class="inner">
-										<img src="images/instructor02.jpg" alt="alt text" class="img-responsive">
-									</div> <!-- end .inner -->
-								</div> <!-- end .image -->
-								<div class="bio">
-									<h5>Wilson Jim</h5>
-									<span>Instructor</span>
-								</div> <!-- end .bio -->
-								<div class="social-icons blue">
-									<div class="social-icon"><a href=""><i class="fa fa-facebook"></i></a></div>
-									<div class="social-icon"><a href=""><i class="fa fa-twitter"></i></a></div>
-									<div class="social-icon"><a href=""><i class="fa fa-linkedin"></i></a></div>
-									<div class="social-icon"><a href=""><i class="fa fa-google-plus"></i></a></div>
-								</div> <!-- end .social-icons -->
-							</div> <!-- end .instructor -->
-						</div> <!-- end .col-sm-3 -->
-						<div class="col-sm-3">
-							<div class="instructor">
-								<div class="image">
-									<div class="inner">
-										<img src="images/instructor03.jpg" alt="alt text" class="img-responsive">
-									</div> <!-- end .inner -->
-								</div> <!-- end .image -->
-								<div class="bio">
-									<h5>Eva Brown</h5>
-									<span>Tester</span>
-								</div> <!-- end .bio -->
-								<div class="social-icons blue">
-									<div class="social-icon"><a href=""><i class="fa fa-facebook"></i></a></div>
-									<div class="social-icon"><a href=""><i class="fa fa-twitter"></i></a></div>
-									<div class="social-icon"><a href=""><i class="fa fa-linkedin"></i></a></div>
-									<div class="social-icon"><a href=""><i class="fa fa-google-plus"></i></a></div>
-								</div> <!-- end .social-icons -->
-							</div> <!-- end .instructor -->
-						</div> <!-- end .col-sm-3 -->
-						<div class="col-sm-3">
-							<div class="instructor">
-								<div class="image">
-									<div class="inner">
-										<img src="images/instructor04.jpg" alt="alt text" class="img-responsive">
-									</div> <!-- end .inner -->
-								</div> <!-- end .image -->
-								<div class="bio">
-									<h5>Martin Gil</h5>
-									<span>Instructor</span>
-								</div> <!-- end .bio -->
-								<div class="social-icons blue">
-									<div class="social-icon"><a href=""><i class="fa fa-facebook"></i></a></div>
-									<div class="social-icon"><a href=""><i class="fa fa-twitter"></i></a></div>
-									<div class="social-icon"><a href=""><i class="fa fa-linkedin"></i></a></div>
-									<div class="social-icon"><a href=""><i class="fa fa-google-plus"></i></a></div>
+									<div class="social-icon"><a href="https://www.facebook.com/profile.php?id=100089476627037"><i class="fa fa-facebook"></i></a></div>
+									<div class="social-icon"><a href="https://api.whatsapp.com/send?phone=%2B353873206963&app=facebook&entry_point=page_cta&fbclid=IwAR0S56Y9G8kRLUN9rTW8NoKBMtx_k-aCOW4h5f2A12L2hEFMrv5HA4HeJ-w"><i class="fa fa-whatsapp"></i></a></div>
 								</div> <!-- end .social-icons -->
 							</div> <!-- end .instructor -->
 						</div> <!-- end .col-sm-3 -->
@@ -320,7 +257,7 @@
 					<div class="heading text-center">
 						<h3>Courses We Offer</h3>
 						<hr class="line" />
-						<span>Our Driving School Provide Best Courses For Our Learners</span>
+						<span>COVERING ALL ASPECTS OF DRIVER TRAINING</span>
 					</div> <!-- end .heading -->
 					<div class="row">
 						<div class="col-sm-3">
@@ -328,11 +265,10 @@
 								<div class="course-icon">
 									<div class="inner"><div class="inner"><i class="fa fa-male"></i></div></div> <!-- end .inner -->
 								</div> <!-- end .course-icon -->
-								<h5>Teen Courses</h5>
+								<h5>EDT Lessons</h5>
 								<div class="course-info">
-									<h5>Teen Courses</h5>
-									<p>Lorem ipsum In aute occaecat Ut commodo id. Lorem ipsum Cillum cillum esse labore irure mollit tempor culpa.</p>
-									<p><a href="">Apply Now <i class="fa fa-angle-double-right"></i></a></p>
+									<h5>EDT Lessons</h5>
+									<p>Driving lessons for teenage, mature or elderly drivers.</p>
 								</div> <!-- end .course-info -->
 							</div> <!-- end .course -->
 						</div> <!-- end .col-sm-3 -->
@@ -341,37 +277,35 @@
 								<div class="course-icon">
 									<div class="inner"><div class="inner"><i class="fa fa-car"></i></div></div> <!-- end .inner -->
 								</div> <!-- end .course-icon -->
-								<h5>Defensive Courses</h5>
-								<div class="course-info">
-									<h5>Defensive Courses</h5>
-									<p>Lorem ipsum In aute occaecat Ut commodo id. Lorem ipsum Cillum cillum esse labore irure mollit tempor culpa.</p>
-									<p><a href="">Apply Now <i class="fa fa-angle-double-right"></i></a></p>
-								</div> <!-- end .course-info -->
-							</div> <!-- end .course -->
-						</div> <!-- end .col-sm-3 -->
-						<div class="col-sm-3">
-							<div class="course">
-								<div class="course-icon">
-									<div class="inner"><div class="inner"><i class="fa fa-wheelchair"></i></div></div> <!-- end .inner -->
-								</div> <!-- end .course-icon -->
-								<h5>Handicap Courses</h5>
-								<div class="course-info">
-									<h5>Handicap Courses</h5>
-									<p>Lorem ipsum In aute occaecat Ut commodo id. Lorem ipsum Cillum cillum esse labore irure mollit tempor culpa.</p>
-									<p><a href="">Apply Now <i class="fa fa-angle-double-right"></i></a></p>
-								</div> <!-- end .course-info -->
-							</div> <!-- end .course -->
-						</div> <!-- end .col-sm-3 -->
-						<div class="col-sm-3">
-							<div class="course">
-								<div class="course-icon">
-									<div class="inner"><div class="inner"><i class="fa fa-truck"></i></div></div> <!-- end .inner -->
-								</div> <!-- end .course-icon -->
 								<h5>Crash Courses</h5>
 								<div class="course-info">
 									<h5>Crash Courses</h5>
-									<p>Lorem ipsum In aute occaecat Ut commodo id. Lorem ipsum Cillum cillum esse labore irure mollit tempor culpa.</p>
-									<p><a href="">Apply Now <i class="fa fa-angle-double-right"></i></a></p>
+									<p>Intensive driving course if you need your licence urgently.</p>
+<!--									<p><a href="">Apply Now <i class="fa fa-angle-double-right"></i></a></p>-->
+								</div> <!-- end .course-info -->
+							</div> <!-- end .course -->
+						</div> <!-- end .col-sm-3 -->
+						<div class="col-sm-3">
+							<div class="course">
+								<div class="course-icon">
+									<div class="inner"><div class="inner"><i class="fa fa-puzzle-piece"></i></div></div> <!-- end .inner -->
+								</div> <!-- end .course-icon -->
+								<h5>Rectify Habits</h5>
+								<div class="course-info">
+									<h5>Rectify Habits</h5>
+									<p>Change your driving habits in as little as 3 hours. Be the best driver you can be by learning and practicing safe driving habits.</p>
+								</div> <!-- end .course-info -->
+							</div> <!-- end .course -->
+						</div> <!-- end .col-sm-3 -->
+						<div class="col-sm-3">
+							<div class="course">
+								<div class="course-icon">
+									<div class="inner"><div class="inner"><i class="fa fa-thumbs-o-up"></i></div></div> <!-- end .inner -->
+								</div> <!-- end .course-icon -->
+								<h5>Pre-test Crash Course</h5>
+								<div class="course-info">
+									<h5>Pre-test Crash Course</h5>
+									<p>Ready to pass your driving test? I’m a professional driver. The best drivers learn from a professional. I’m here to help you to pass your driving test and get a full license.</p>
 								</div> <!-- end .course-info -->
 							</div> <!-- end .course -->
 						</div> <!-- end .col-sm-3 -->
@@ -387,9 +321,9 @@
 
 					<!-- Testimonials -->
 					<div class="heading text-center">
-						<h3>Trusted By Thousands</h3>
+						<h3>Trusted By Many</h3>
 						<hr class="line" />
-						<span>Satisfied Customer Feedback</span>
+						<span>100% Customer Satisfaction</span>
 					</div> <!-- end .heading -->
 					<div class="row">
 						<div class="col-sm-6">
@@ -397,8 +331,8 @@
 								<div class="testimonial-image"><div class="inner"><img src="images/testimonial01.jpg" alt="alt text" class="img-responsive"></div></div> <!-- end .testimonial-image -->
 								<div class="testimonial-body">
 									<span class="quote-icon"><i class="fa fa-quote-right"></i></span>
-									<h5>Jerry Wilson</h5>
-									<p>Lorem ipsum Consequat ut dolor Duis ut minim eiusmod reprehenderit proident. Lorem ipsum Duis ut sunt nisi fugiat incididunt Duis ea adipisicing dolor nulla sint et.</p>
+									<h5>Robin Joseph</h5>
+									<p>Passed my test today with flying colours, finally got my full licence. I am greatly appreciated for having Mr. Joseph as my instructor, he's very thoughtful and also meticulous, something that really gave me an edge while doing my test today.</p>
 								</div> <!-- end .testimonial-body -->
 							</div> <!-- end .testimonial -->
 						</div> <!-- end .col-sm-6 -->
@@ -407,8 +341,8 @@
 								<div class="testimonial-image"><div class="inner"><img src="images/testimonial02.jpg" alt="alt text" class="img-responsive"></div></div> <!-- end .testimonial-image -->
 								<div class="testimonial-body">
 									<span class="quote-icon"><i class="fa fa-quote-right"></i></span>
-									<h5>Katrin Jim</h5>
-									<p>Lorem ipsum Consequat ut dolor Duis ut minim eiusmod reprehenderit proident. Lorem ipsum Duis ut sunt nisi fugiat incididunt Duis ea adipisicing dolor nulla sint et.</p>
+									<h5>Jacintha Lobo</h5>
+									<p>Thanks to Joseph, I had no trouble passing my driving test on the first go. He was calm, considerate, and encouraging which helped me build my confidence. He is an effective instructor and I highly recommend him.</p>
 								</div> <!-- end .testimonial-body -->
 							</div> <!-- end .testimonial -->
 						</div> <!-- end .col-sm-6 -->
@@ -420,7 +354,7 @@
 								<div class="testimonial-body">
 									<span class="quote-icon"><i class="fa fa-quote-right"></i></span>
 									<h5>Dwayne Johnson</h5>
-									<p>Lorem ipsum Consequat ut dolor Duis ut minim eiusmod reprehenderit proident. Lorem ipsum Duis ut sunt nisi fugiat incididunt Duis ea adipisicing dolor nulla sint et.</p>
+									<p>I had a few lessons with Joseph in preparation for my full test which I passed with flying colours. Thanks to his teaching and pointers, driving has become a lot less daunting. Definitely recommend him as an Instructor.</p>
 								</div> <!-- end .testimonial-body -->
 							</div> <!-- end .testimonial -->
 						</div> <!-- end .col-sm-6 -->
@@ -451,7 +385,7 @@
 						<span>We have Three Packages For Our learners</span>
 					</div> <!-- end .heading -->
 					<div class="row">
-						<div class="col-sm-4">
+						<div class="col-sm-3">
 							<div class="pricing-table blue">
 								<div class="inner">
 									<div class="pricing-table-price">
@@ -477,7 +411,7 @@
 								</div> <!-- end .inner -->
 							</div> <!-- end .pricing-table -->
 						</div> <!-- end .col-sm-4 -->
-						<div class="col-sm-4">
+						<div class="col-sm-3">
 							<div class="pricing-table yellow">
 								<div class="inner">
 									<div class="pricing-table-price">
@@ -503,7 +437,33 @@
 								</div> <!-- end .inner -->
 							</div> <!-- end .pricing-table -->
 						</div> <!-- end .col-sm-4 -->
-						<div class="col-sm-4">
+						<div class="col-sm-3">
+							<div class="pricing-table dark">
+								<div class="inner">
+									<div class="pricing-table-price">
+										<div class="inner">
+											<span>$400</span>
+										</div> <!-- end .inner -->
+									</div> <!-- end .pricing-table-price -->
+									<div class="pricing-table-heading">
+										Unlimited<small>Monthly Fee</small>
+									</div> <!-- end .pricing-table-heading -->
+									<div class="pricing-table-features">
+										<ul class="list-unstyled">
+											<li>Free Form To Sign</li>
+											<li>5 Month Course</li>
+											<li>35 Video Classes</li>
+											<li>6 Hours Per Day</li>
+											<li>Weekly 3 Tests</li>
+										</ul>
+									</div> <!-- end .pricing-table-features -->
+									<div class="pricing-table-button">
+										<a href="" class="button white border">Join Now</a>
+									</div> <!-- end .pricing-table-button -->
+								</div> <!-- end .inner -->
+							</div> <!-- end .pricing-table -->
+						</div> <!-- end .col-sm-4 -->
+						<div class="col-sm-3">
 							<div class="pricing-table dark">
 								<div class="inner">
 									<div class="pricing-table-price">
