--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
 		<header class="header">
 
 			<div class="container clearfix">
-				<div class="logo"><a href="index.html"><img src="images/logo.png" alt="Drive Pro"></a></div>
+				<div class="logo"><a href="index.html"><img src="images/logo2.jpeg" alt="Drive Pro"></a></div>
 				<div class="header-contacts">
 					<div class="header-contact">
 						<div class="small-round-icon"><i class="fa fa-map-marker"></i></div>
-						Design Street, Australia
+						R93W5T7
 					</div>  <!-- end .header-contact -->
 					<div class="header-contact">
 						<div class="small-round-icon"><i class="fa fa-envelope"></i></div>
-						Info@Defatch.com
+						k.joseph007@gmail.com
 					</div>  <!-- end .header-contact -->
 					<div class="header-contact">
 						<div class="small-round-icon"><i class="fa fa-phone"></i></div>
-						+123 456 789
+						+353 873206963
 					</div>  <!-- end .header-contact -->
 				</div> <!-- end .header-contacts -->
 				<a href="" class="responsive-menu-open">Menu <i class="fa fa-bars"></i></a>
